add-together time

--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
 			<h2>Countdown to Anniversary</h2>
 			<div id="countdown"></div>
 			<p id="message"></p>
+			<h2 id="together"></h2>
 		</div>
 		<script src="popup.js"></script>
 	</body>
